--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
         - id: sber
           uri: lb://samokat
           predicates:
-            - Path=/api/best
+            - Path=/api/best/*
             - Method=GET
 
         - id: itmo
